--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,9 +31,10 @@
           <h3>Listado</h3>
           <ul id="list=gasto">
             <li *ngFor="let gasto of gastos; index as indice" class="gastos">
-              <div>
+              <div class="gasto">
                 {{gasto.nombreGasto}}
                 <span class="gasto">${{gasto.cantidadGasto}}</span>
+                <button (click)="eliminarGasto(gasto)">Eliminar</button>
               </div>
             </li>
           </ul>
