--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.App {
+.encabezamiento {
   text-align: center;
 }
 
@@ -25,13 +25,13 @@ h3 {
   margin-bottom: 2rem;
 }
 
-.row:after {
+.fila:after {
   content: "";
   display: table;
   clear: both;
 }
 
-.column {
+.columna {
   float: left;
   padding: 10px;
   height: 300px;
