--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap");
+
+body {
+  background-color: #1c162e;
+  margin: 0;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  height: 100vh;
+  width: 100%;
+  background-image: url("./assets/bg.svg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
+}
