--- a/src/styles.css
+++ b/src/styles.css
@@ -2,15 +2,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap");
 
 body {
-  background-color: #1c162e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
+
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   color: white;
+
   height: 100vh;
-  width: 100%;
+  min-width: 100%;
+
+  background-color: #1c162e;
   background-image: url("./assets/bg.svg");
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: contain;
+}
+
+input {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid #aaaaaa;
+  padding: 5px 10px;
+  box-sizing: border-box;
+  font-size: 1em;
+  outline: none;
+  margin: 10px 0;
+}
+
+input::placeholder {
+  color: #aaaaaa;
+  font-family: "montserrat", sans-serif;
+  font-size: 16px;
 }
