--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -53,6 +53,7 @@
   display: flex;
   flex-direction: column;
   animation: gasto-animation 450ms;
+  will-change: transform;
 }
 
 .gasto h3 {
@@ -123,6 +124,7 @@
   background: linear-gradient(314.33deg, #ed4257 -3.69%, #ce1862 109.82%);
   border-radius: 15px;
   animation: item-in 450ms;
+  will-change: opacity;
 
   padding: 0.6em 1em;
   box-sizing: border-box;
