--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ body {
   background-color: #1c162e;
   background-image: url("./assets/bg.svg");
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position: bottom center;
   background-size: contain;
 }
 
@@ -37,4 +37,16 @@ input::placeholder {
   color: #aaaaaa;
   font-family: "montserrat", sans-serif;
   font-size: 16px;
+}
+
+/* TODO: configurar la altura de una mejor forma */
+@media screen and (max-width: 825px) {
+  body {
+    height: 1115px;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0 10%;
+    box-sizing: border-box;
+  }
 }
