--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
       />
     </div>
     <div>
-      <label> Cantidad: </label>
+      <label>Precio: </label>
       <input
         type="number"
         [(ngModel)]="cantidadGasto"
@@ -41,7 +41,7 @@
       <p>{{ restante }} Bs</p>
     </div>
 
-    <div class="caja-lista">
+    <div class="caja-lista" *ngIf="existePresupuesto">
       <ul>
         <li *ngFor="let gasto of gastos; index as indice">
           <p>{{ gasto.nombreGasto }}</p>
