--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
 body {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
   margin: 0;
 
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-  color: white;
+  font-size: 1em;
+  font-family: "Open Sans", sans-serif;
+  color: black;
 
-  height: 100vh;
-  min-width: 100%;
+  height: auto;
+  width: 100%;
 
-  background-color: #1c162e;
-  background-image: url("./assets/bg.svg");
-  background-repeat: no-repeat;
-  background-position: bottom center;
-  background-size: contain;
+  background-color: #ECF0F1;
 }
 
 input {
@@ -26,7 +23,8 @@ input {
   height: 40px;
 
   border-radius: 5px;
-  border: 1px solid #aaaaaa;
+  background-color: #FAFAFA;
+  border: 1px solid #DCDCDC;
   outline: none;
 
   font-size: 1em;
@@ -39,18 +37,12 @@ input {
 input::placeholder {
   color: #aaaaaa;
   font-family: "montserrat", sans-serif;
-  font-size: 16px;
+  font-size: 1em;
 }
 
-@media screen and (max-width: 825px) {
+/* @media screen and (max-width: 768px) {
   body {
-    height: 1115px;
-    width: 100%;
-
-    align-items: flex-start;
-    justify-content: center;
-
     padding: 0 10%;
     box-sizing: border-box;
   }
-}
+} */
