--- a/src/styles.css
+++ b/src/styles.css
@@ -40,9 +40,255 @@ input::placeholder {
   font-size: 1em;
 }
 
-/* @media screen and (max-width: 768px) {
-  body {
+.contenedor-principal {
+  margin-top: 1em;
+
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  gap: 10px;
+}
+
+.contenedor-principal::before{
+  content: "Mis Gastos";
+  grid-column: 1/3;
+
+  display: flex;
+  width: 100%;
+  justify-content: center;
+
+  font-family: "Open-Sans", sans-serif;
+  font-weight: bold;
+  font-size : 2em;
+  color: #4F5B62;
+}
+
+.presupuesto {
+  grid-column: 1/3;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.presupuesto::before{
+  display: block;
+  width: 75%;
+
+  content: "Agrega tu prepuesto mensual y el tipo de moneda en el que quieras hacer todos los calculos.";
+
+  margin-bottom: 1em;
+}
+
+.presupuesto label {
+  font-size: 1em;
+  font-weight: bold;
+  width: 100%;
+
+  color: #4F5B62;
+
+  margin-bottom: 12px;
+}
+
+.presupuesto input {
+  flex: 1;
+
+  height: 54px;
+
+  margin: 0;
+  margin-right: 0.5em;
+}
+
+.form {
+  padding: 1em;
+
+  background-color: white;
+  border-radius: 15px;
+
+  color: black;
+  font-family: "Open Sans", sans-serif;
+}
+
+.form button {
+  width: 120px;
+  height: 55px;
+
+  color: white;
+  font-weight: 700;
+  font-size: 1em;
+
+  border: none;
+  border-radius: 5px;
+  outline: none;
+
+  background-color: #00CAEE;
+  cursor: pointer;
+}
+
+.gasto {
+  position: relative;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+
+  grid-column: 1/3;
+
+  margin-top: 3.5em;
+}
+
+.gasto h3 {
+  position: absolute;
+  top: -1em;
+  left: 0;
+
+  color: #4F5B62;
+
+  width: 100%;
+
+  margin-top: -20px;
+
+  font-size: 1.5em;
+}
+
+.gasto div {
+  flex: 2;
+  margin-right: 0.5em;
+}
+
+.gasto div input {
+  margin-bottom: 0px;
+}
+
+.gasto button {
+  flex: 1;
+  height: 40px;
+}
+
+.gasto label {
+  font-size: 0.75em;
+}
+
+.contenedor-lista {
+  display: grid;
+  grid-column: 1/3;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 300px;
+  gap: 0.75em;
+}
+
+.restante {
+  width: 100%;
+  height: 300px;
+
+  grid-column: 2/3;
+
+  padding: 10px;
+  box-sizing: border-box;
+
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  background: #92CA56;
+  color: white;
+  border-radius: 11px;
+}
+
+.restante p {
+  margin: 0 0 10px;
+
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.restante p:nth-child(2) {
+  margin: 0;
+
+  font-size: 2em;
+}
+
+.caja-lista {
+  width: 100%;
+  height: 100%;
+
+  margin-bottom: 2em;
+
+  background-color: white;
+  border-radius: 11px;
+
+  grid-column: 1/2;
+  grid-row: 1/2;
+
+  overflow-y: auto;
+}
+
+.caja-lista ul {
+  list-style: none;
+
+  margin: 0;
+  padding: 0px;
+
+  padding-top: 10px;
+}
+
+.caja-lista ul::before{
+  content: "Lista de gastos";
+  font-weight: 700;
+  color: #4F5B62;
+
+  margin: 10px;
+  margin-top: 1em;
+}
+
+.caja-lista ul li {
+  display: flex;
+  justify-content: space-between;
+
+  max-width: 100%;
+
+  padding: 0em 1em;
+  box-sizing: border-box;
+}
+
+.caja-lista ul li p {
+  flex: 1;
+
+  overflow-x: auto;
+
+  display: flex;
+  align-items: center;
+
+  font-size: 14px;
+}
+
+.caja-lista ul li div {
+  display: flex;
+  align-items: center;
+}
+
+.caja-lista ul li div span {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.caja-lista ul li div button {
+  cursor: pointer;
+
+  background: none;
+  border: none;
+  outline: none;
+}
+
+.caja-lista ul li div button img {
+  width: 16px;
+}
+
+@media screen and (max-width: 505px) {
+  .contenedor-principal{
+    width: 100%;
     padding: 0 10%;
-    box-sizing: border-box;
   }
-} */
+}
