--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
           <div>
             <span>{{ gasto.cantidadGasto }} Bs</span>
             <button (click)="eliminarGasto(indice, gasto.cantidadGasto)">
-              <img src="../assets/delete-icon.svg" alt="delete" />
+              <img src="https://raw.githubusercontent.com/angular-bolivia/ng-she-workshop/develop/src/assets/delete-icon.svg" alt="delete" />
             </button>
           </div>
         </li>
